@@ -163,6 +163,7 @@ All (GUI):
 
 - Allow status bar children in XRC (Edmunt Pienkowski)
 - Fix memory leak in wxWizard when not using sizers for the page layout
+- Added wxListCtrl::SetItemPtrData()
 
 wxMSW:
 
